tests/m1/negative/private_struct_import.ax
module private_struct_import;

import m1lib.visibility;

fn main() -> i32 {
    let box = HiddenBox {
        value: 1,
    };
    return box.value;
}
